Corrected Spacing for navbar

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,200;1,200&display=swap');
 
+body, html {
+    overflow-x: hidden;
+}
+
 body {
     margin: 0;
     font-family: Jost;
@@ -15,11 +19,15 @@ body {
 
 #header {
     height: 12vh;
-    width: 100%;
+    width: 100vw;
     border-bottom: 2px black solid;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+}
+
+#header > div {
+    width: 50%;
 }
 
 #logo {
@@ -33,11 +41,11 @@ body {
     margin-left: 20px;
 }
 
-#header div {
+#navbar {
+    display: flex;
+    align-content: center;
+    justify-content: flex-end;
     margin-right: 20px;
-    height: 80%;
-    margin-top: auto;
-    margin-bottom: auto;
 }
 
 #header div button {
